Fixed the wrap bug of long tweets. Another bug: character counter doesn't reset when I clear the textarea

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -49,6 +49,7 @@ article.tweet .handle {
 /*Actual Tweet Text*/
 article.tweet p {
   margin: 1em;
+  overflow-wrap: break-word;
 }
 
 /*Footer*/
